# apicenter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  notes.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
apicenter/: __init__.py  apicenter.py  computer_vision.py  config.py  fail_safe_handler.py  llm.py  new_llm.py  new_text_to_image.py  text_to_image.py  text_to_video.py  universal_api_caller.py
apicenter/audio/: audio.py
apicenter/audio/providers/: elevenlabs.py  google.py
apicenter/core/: base.py  credentials.py
apicenter/image/: image.py
apicenter/image/providers/: openai.py  stability.py
apicenter/llm/: llm.py
apicenter/text/: text.py
apicenter/text/providers/: anthropic.py  deepseek.py  ollama.py  openai.py
docs/: api_reference.md  configuration.md  extending.md  models.md  providers.md  release_management.md
examples/: advanced_chat.py  advanced_usage.py  audio_examples.py  basic_usage.py  image_examples.py  llm_examples.py
examples/outputs/: structured_response.json  text_response.txt
pseudo/: app.py  media_handler.py
tests/: README.md  run_tests.py  test_apicenter.py  test_audio.py  test_audio_elevenlabs.py  test_computer_vision_image.py  test_computer_vision_realtime.py  test_error_handling.py  test_image.py  test_image_openai.py  test_image_stability.py  test_integration.py  test_llm.py  test_text.py  test_text_anthropic.py  test_text_deepseek.py  test_text_ollama.py  test_text_openai.py  test_text_to_image.py
