[tool.poetry]
name = "apicenter"
version = "0.1.0"
description = "This is Alish Chhetri's senior thesis project named 'apicenter'."
authors = ["AlishChhetri <chhetri01@allegheny.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.51.2"
anthropic = "^0.36.1"
python-dotenv = "^1.0.1"
rich = "^13.9.2"

[tool.poetry.scripts]
apicenter = "apicenter.api_caller:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
