[tool.poetry]
name = "apicenter"
version = "0.1.0"
description = "Universal Python interface for AI APIs with a consistent pattern across providers"
authors = ["Alish Chhetri <chhetri01@allegheny.edu>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/alishchhetri/apicenter"
documentation = "https://github.com/alishchhetri/apicenter/tree/main/docs"
keywords = ["ai", "api", "openai", "anthropic", "ollama", "stability", "elevenlabs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "apicenter" }
]

[tool.poetry.scripts]
apicenter = "apicenter.main:cli"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.69.0"
anthropic = "^0.49.0"
pillow = "^11.1.0"
requests = "^2.32.0"
elevenlabs = "^1.55.0"
stability-sdk = "^0.8.6"
ollama = "^0.4.7"

[tool.poetry.group.dev.dependencies]
black = "^21.8b0"
taskipy = "^1.8.1"
flake8 = "^3.9.2"
pydocstyle = "^6.1.1"
pylint = "^2.10.2"
mypy = "^0.910"
pytest = "^7.1.1"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = "^v(?P<base>\\d+\\.\\d+\\.\\d+)(?P<stage>alpha|beta|rc)?(?P<rev>\\d+)?$"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length errors for now

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]  # Allow unused imports in test files
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py files
